2003-02-01  Steffen Macke <sdteffen@web.de>

	* app/lineprops_area.c: latest changes do not work on
	windows, using old code without tooltips
	* makefile.msc: fixed copying of wmf.dll
	* plug-ins/makefile.msc: 
	* app/makefile.msc:
	* lib/makefile.msc: now linking libintl
	* config.h.win32: enabling native language support

2003-01-31  Daniel Yacob  <locales@geez.org>

	* configure.in: Added am (Amharic) to ALL_LINGUAS.

2003-01-31  Steffen Macke <sdteffen@web.de>

	 objects/UML/class.c (umlclass_calculate_data): fixed crash
	 when comments were visible, no class comment available and
	 a attribute comment
	 
2003-01-31  Lars Clausen  <lrclause@cs.uiuc.edu>

	* RELEASE-PROCESS: Updated to fit new install-module syntax.
	* Prerelease 0.91-pre1 released on a suspecting public.  Tagging
	with DIA_0_91_PRE1.

2003-01-30  Lars Clausen  <lrclause@cs.uiuc.edu>

	* config.h.win32: 
	* NEWS: 
	* configure.in:
	* dia.spec:
	Prerelease version changes, version 0.91-pre1.

	* app/sheets_dialog_callbacks.h: 
	* app/sheets_dialog_callbacks.c: 
	* app/sheets_dialog.c (create_sheets_main_dialog): 
	* app/sheets.c (sheets_dialog_create): More destroy stuff.  Trying
	to handle destruction of main dialog cleanly, but it's a mess.

	* configure.in: Downgraded ieeefp test to make it not produce
	illegal shell code.

	* lib/widgets.c (dia_arrow_selector_set_arrow): 
	(dia_line_style_selector_set_linestyle): Select menu dot
	correctly set.

	* lib/arrows.c (calculate_arrow_point): Fix of wrong arrow
	adjustment for diamondheads.

	* lib/plug-ins.c (dia_plugin_load): Fixed typo.

	* app/properties.c (create_dialog): Destroy properties dialog and
	box correctly.

	* app/sheets_dialog_callbacks.c
	(on_sheets_dialog_button_edit_clicked): Only create a new dialog
	if the old one is destroyed.

2003-01-29  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/export_png.c (export_png_ok): Added info on resolution.
	Should (next release) improve export dialog to allow setting